# rust-auth-system-astix

./: Cargo.toml  README.md
src/: config.rs  main.rs
src/auth/: generate_token.rs  get_token.rs  store_token.rs
src/db/: init_db.rs  init_tables.rs
src/guards/: requires_login.rs
src/routes/: login.rs  signup.rs  test.rs
src/structs/: accounts.rs  login_struct.rs  person.rs  tokens.rs
