[package]
name = "surrealdb-actix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
apistos = "0.4.1"
apistos-schemars = { git = "https://github.com/netwo-io/apistos-schemars", version = "0.8.21" }
argon2 = "0.5.3"
env_logger = "0.11.5"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
schemars = "0.8.21"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
surrealdb = "2.1.0"



